--- a/blogclient/public/index.html
+++ b/blogclient/public/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -21,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React App</title>
+        <title>kjiyu's log</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
